# classification-rs

./: Cargo.toml
src/: combinatorics.rs  core.rs  equal.rs  main.rs  naive_jenks.rs  quantile.rs  test.rs
