[package]
name = "classification"
description = "One dimensional data classification" 
version = "0.1.0"
edition = "2018"
authors = ["Benjamin Liden <benjamin.c.liden@gmail.com>"]
categories = ["science"]
keywords = ["breaks", "jenks", "quantile", "gis", "geo",]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
num-traits = "0.2.14"
